--- a/whitelist.html
+++ b/whitelist.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,7 +13,7 @@
         <h1>Whitelist Management</h1>
         <input type="text" id="username" placeholder="Enter username" class="form-control" />
         <button id="addButton" class="btn btn-primary">Add to Whitelist</button>
-        <button id="resetButton" class="btn btn-danger">Reset Whitelist</button>
+        <button id="removeButton" class="btn btn-danger">Remove from Whitelist</button>
         <button id="downloadButton" class="btn btn-success">Download Whitelist</button>
         <button id="combineDownloadButton" class="btn btn-info">Combine Download</button>
 
@@ -61,19 +60,29 @@
             }
         };
 
-        // Reset the whitelist
-        document.getElementById('resetButton').onclick = () => {
-            fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist', {
-                method: 'DELETE',
-            })
-            .then(response => {
-                if (response.ok) {
-                    whitelistUsers.innerHTML = ''; // Clear the list
-                    alert('Whitelist has been reset');
-                } else {
-                    alert('Failed to reset whitelist');
-                }
-            });
+        // Remove username from whitelist
+        document.getElementById('removeButton').onclick = () => {
+            const username = usernameInput.value.trim();
+            if (username) {
+                fetch(`https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist`, {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ username })
+                })
+                .then(response => {
+                    if (response.ok) {
+                        const li = Array.from(whitelistUsers.children).find(item => item.textContent === username);
+                        if (li) {
+                            whitelistUsers.removeChild(li);
+                        }
+                        usernameInput.value = '';
+                    } else {
+                        alert('Failed to remove user from whitelist');
+                    }
+                });
+            }
         };
 
         // Download whitelist as a Lua table
