--- a/whitelist.html
+++ b/whitelist.html
@@ -24,37 +24,23 @@
     <script>
         const whitelistUsers = document.getElementById('whitelistUsers');
         const usernameInput = document.getElementById('username');
-        const baseURL = 'https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist';
 
         // Fetch the whitelist from the Node.js server
-        const fetchWhitelist = () => {
-            fetch(baseURL)
-                .then(response => {
-                    if (!response.ok) throw new Error('Failed to fetch whitelist');
-                    return response.json();
-                })
-                .then(data => {
-                    whitelistUsers.innerHTML = ''; // Clear the existing list
-                    data.forEach(user => {
-                        const li = document.createElement('li');
-                        li.textContent = user;
-                        whitelistUsers.appendChild(li);
-                    });
-                })
-                .catch(error => {
-                    console.error(error);
-                    alert('Error fetching whitelist: ' + error.message);
+        fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
+            .then(response => response.json())
+            .then(data => {
+                data.forEach(user => {
+                    const li = document.createElement('li');
+                    li.textContent = user;
+                    whitelistUsers.appendChild(li);
                 });
-        };
-
-        // Initial fetch of the whitelist
-        fetchWhitelist();
+            });
 
         // Add username to whitelist
         document.getElementById('addButton').onclick = () => {
             const username = usernameInput.value.trim();
             if (username) {
-                fetch(baseURL, {
+                fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -70,47 +56,42 @@
                     } else {
                         alert('Failed to add user to whitelist');
                     }
-                })
-                .catch(error => {
-                    console.error(error);
-                    alert('Error adding user: ' + error.message);
                 });
             }
         };
 
-         // Remove username from whitelist
-document.getElementById('removeButton').onclick = () => {
-    const username = usernameInput.value.trim();
-    if (username) {
-        fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist', {
-            method: 'DELETE',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ username }) // Include username in body
-        })
-        .then(response => {
-            if (response.ok) {
-                const li = Array.from(whitelistUsers.children).find(item => item.textContent === username);
-                if (li) {
-                    whitelistUsers.removeChild(li); // Remove user from the displayed list
-                }
-                usernameInput.value = ''; // Clear input
-            } else {
-                alert('Failed to remove user from whitelist: ' + response.statusText);
+        // Remove username from whitelist
+        document.getElementById('removeButton').onclick = () => {
+            const username = usernameInput.value.trim();
+            if (username) {
+                fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist', {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ username }) // Include username in body
+                })
+                .then(response => {
+                    if (response.ok) {
+                        const li = Array.from(whitelistUsers.children).find(item => item.textContent === username);
+                        if (li) {
+                            whitelistUsers.removeChild(li); // Remove user from the displayed list
+                        }
+                        usernameInput.value = ''; // Clear input
+                    } else {
+                        alert('Failed to remove user from whitelist: ' + response.statusText);
+                    }
+                })
+                .catch(error => {
+                    console.error('Error removing user:', error); // Log error for debugging
+                    alert('Error removing user: ' + error.message);
+                });
             }
-        })
-        .catch(error => {
-            console.error('Error removing user:', error); // Log error for debugging
-            alert('Error removing user: ' + error.message);
-        });
-    }
-};
-
+        };
 
         // Download whitelist as a Lua table
         document.getElementById('downloadButton').onclick = () => {
-            fetch(baseURL)
+            fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
                 .then(response => response.json())
                 .then(users => {
                     const luaContent = `local whitelistedPlayers = {\n${users.map(user => `  "${user}",`).join('\n')}\n}`; // Create Lua content
@@ -123,10 +104,6 @@ document.getElementById('removeButton').onclick = () => {
                     a.click();
                     document.body.removeChild(a);
                     URL.revokeObjectURL(url);
-                })
-                .catch(error => {
-                    console.error(error);
-                    alert('Error downloading whitelist: ' + error.message);
                 });
         };
 
@@ -137,28 +114,7 @@ document.getElementById('removeButton').onclick = () => {
             const existingContent = await response.text(); // Get the text of the existing content
 
             // Fetch the current whitelist
-            const whitelistResponse = await fetch(baseURL);
+            const whitelistResponse = await fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist');
             const users = await whitelistResponse.json();
 
-            // Create the Lua table
-            const luaTable = `local whitelistedPlayers = {\n${users.map(user => `  "${user}",`).join('\n')}\n}\n\n`;
-
-            // Combine the Lua table with the existing content
-            const combinedContent = luaTable + existingContent;
-
-            // Create a blob and download the combined content
-            const blob = new Blob([combinedContent], { type: 'text/plain' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'combinedWhitelist.txt'; // The name of the downloaded file
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
-            URL.revokeObjectURL(url);
-        };
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
-</html>
+            // Create
