--- a/whitelist.html
+++ b/whitelist.html
@@ -23,7 +23,7 @@
         const whitelistUsers = document.getElementById('whitelistUsers');
         const usernameInput = document.getElementById('username');
 
-        // Fetch the whitelist from the Node.js server
+        
         fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
             .then(response => response.json())
             .then(data => {
@@ -34,7 +34,6 @@
                 });
             });
 
-        // Function to add username to whitelist
         const addUsernameToWhitelist = () => {
             const username = usernameInput.value.trim();
             if (username) {
@@ -58,40 +57,31 @@
             }
         };
 
-        // Add username to whitelist when button is clicked
         document.getElementById('addButton').onclick = addUsernameToWhitelist;
 
-        // Add username to whitelist when Enter key is pressed
         usernameInput.addEventListener('keypress', (event) => {
             if (event.key === 'Enter') {
                 addUsernameToWhitelist();
             }
         });
 
-        // Combine Download button
         document.getElementById('combineDownloadButton').onclick = async () => {
-            // Fetch the existing content from the specified URL
             const response = await fetch('https://cdn.discordapp.com/attachments/781966227157286924/1290482994531799070/combinedFile.txt?ex=66fc9f71&is=66fb4df1&hm=ba5162ecf6031e9fb5bbef5f7947a2f234e198f4b04dd6d81d6f45935c960b85&');
-            const existingContent = await response.text(); // Get the text of the existing content
+            const existingContent = await response.text(); 
 
-            // Fetch the current whitelist
             const whitelistResponse = await fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist');
             const users = await whitelistResponse.json();
-
-            // Create the Lua table
             const luaTable = `local whitelistedPlayers = {\n${users.map(user => `  "${user}",`).join('\n')}\n}\n\n`;
             const pluaTable = `local premiumUsers = {\n${users.map(user => `  "${user}",`).join('\n')}\n}\n\n`;
 
 
-            // Combine the Lua table with the existing content
             const combinedContent = pluaTable + luaTable + existingContent;
 
-            // Create a blob and download the combined content
             const blob = new Blob([combinedContent], { type: 'text/plain' });
             const url = URL.createObjectURL(blob);
             const a = document.createElement('a');
             a.href = url;
-            a.download = 'combinedWhitelist.txt'; // The name of the downloaded file
+            a.download = 'combinedWhitelist.txt'; 
             document.body.appendChild(a);
             a.click();
             document.body.removeChild(a);
