--- a/buy.html
+++ b/buy.html
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             font-family: Arial, sans-serif;
-            background: url('https://images.unsplash.com/photo-1470406682534-e0a119833911?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wxfDB8MXxyYW5kb218MHx8Z2FsYXh5fHx8fHx8MTY5NjEwOTgxN3ww&ixlib=rb-1.2.1&q=80&w=1080') no-repeat center center fixed;
+            background: url('https://i.imgur.com/3h9sQkD.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white;
             text-align: center;
