--- a/buy.html
+++ b/buy.html
@@ -6,41 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AK Admin: The Ultimate Roblox Command Tool</title>
     <style>
-        body, html {
+        body {
             margin: 0;
             padding: 0;
-            height: 100%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             font-family: Arial, sans-serif;
+            background: url('https://media.giphy.com/media/3kpVc7C1xPOUOCeU2u/giphy.gif') no-repeat center center fixed;
+            background-size: cover;
             color: white;
             text-align: center;
             overflow: hidden;
         }
 
-        /* YouTube video as background */
-        .video-background {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none; /* Disable interactions with the video */
-            z-index: -1;
-        }
-
-        iframe {
-            width: 100vw;
-            height: 100vh;
-        }
-
-        /* Content styling */
         .content {
-            position: relative;
-            z-index: 1;
             background-color: rgba(0, 0, 0, 0.7);
             padding: 20px;
             border-radius: 10px;
             max-width: 800px;
-            margin: auto;
         }
 
         h1 {
@@ -55,16 +40,6 @@
     </style>
 </head>
 <body>
-    <!-- YouTube video background -->
-    <div class="video-background">
-        <iframe src="https://www.youtube.com/embed/pgEJrfQpRsA?autoplay=1&mute=1&loop=1&playlist=pgEJrfQpRsA&controls=0&showinfo=0&modestbranding=1&start=0"
-                frameborder="0"
-                allow="autoplay; encrypted-media"
-                allowfullscreen>
-        </iframe>
-    </div>
-
-    <!-- Content on top of video -->
     <div class="content">
         <h1>AK Admin: The Ultimate Roblox Command Tool</h1>
         <p><strong>Overview</strong></p>
