--- a/buy.html
+++ b/buy.html
@@ -51,7 +51,7 @@
         <div class="content" id="content">
             <h1>AK Admin: The Ultimate Roblox Command Tool</h1>
             <p><strong>Overview</strong></p>
-            <p>"AK Admin" is a cutting-edge command tool for Roblox, designed to provide users with unmatched control, flexibility, and ease of use. It has quickly risen to become the best tool on the market, thanks to its robust features and reliability. AK Admin is crafted to meet the needs of all types of Roblox exploiters, offering a streamlined approach to managing games and ensuring the smooth running of any Roblox experience.</p>
+            <p>"AK Admin" is a cutting-edge command tool for Roblox, designed to provide users with unmatched control, flexibility, and ease of use. It has quickly risen to become the best tool on the market, thanks to its robust features and reliability. AK Admin is crafted to meet the needs of all types of Roblox exploiters, ensuring the smooth running of any Roblox experience.</p>
         </div>
     </div>
 
