--- a/buy.html
+++ b/buy.html
@@ -23,15 +23,17 @@
 
         .wrapper {
             perspective: 1000px; /* Enable 3D perspective */
+            max-height: 90vh; /* Limit height for scrolling */
+            overflow-y: auto; /* Enable vertical scrolling */
+            padding: 20px; /* Add some padding */
+            background: rgba(0, 0, 0, 0.7); /* Background for content area */
+            border-radius: 10px; /* Rounded corners */
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5); /* Initial shadow */
         }
 
         .content {
-            background-color: rgba(0, 0, 0, 0.7);
             padding: 20px;
-            border-radius: 10px;
-            max-width: 800px;
-            transition: transform 0.2s ease, box-shadow 0.2s ease; /* Smooth transition for scaling and shadow */
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5); /* Initial shadow */
+            transition: transform 0.2s ease; /* Smooth transition for scaling */
             position: relative; /* Enable positioning for the shadow */
         }
 
@@ -44,6 +46,24 @@
             font-size: 1.2em;
             line-height: 1.6;
         }
+
+        .buy-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            color: white;
+            background-color: #28a745; /* Green color */
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: box-shadow 0.3s ease; /* Smooth transition for shadow */
+            text-decoration: none; /* Remove underline from link */
+            display: inline-block; /* Ensure button-like behavior */
+        }
+
+        .buy-button:hover {
+            box-shadow: 0 0 20px rgba(40, 167, 69, 0.7); /* Glow effect on hover */
+        }
     </style>
 </head>
 <body>
@@ -52,6 +72,8 @@
             <h1>AK Admin: The Ultimate Roblox Command Tool</h1>
             <p><strong>Overview</strong></p>
             <p>"AK Admin" is a cutting-edge command tool for Roblox, designed to provide users with unmatched control, flexibility, and ease of use. It has quickly risen to become the best tool on the market, thanks to its robust features and reliability. AK Admin is crafted to meet the needs of all types of Roblox exploiters, ensuring the smooth running of any Roblox experience.</p>
+            <p>For more information on features, pricing, and usage, scroll down to explore everything AK Admin has to offer!</p>
+            <a href="https://discord.gg/bzRByg7xUw" target="_blank" class="buy-button">Buy AK Admin</a>
         </div>
     </div>
 
